--- a/LSTM_Single.ipynb
+++ b/LSTM_Single.ipynb
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "431677 ,  79\n",
-      "{'3': 0, 'g': 1, 'z': 2, 'j': 3, 'N': 4, '\\\\': 5, 'q': 6, 'O': 7, 'B': 8, 'v': 9, 'U': 10, 'Y': 11, '8': 12, '4': 13, 'e': 14, '6': 15, 'm': 16, 'f': 17, 'y': 18, '-': 19, '9': 20, ':': 21, 'G': 22, 'H': 23, 'k': 24, 'i': 25, 'C': 26, 'L': 27, ' ': 28, 'A': 29, '~': 30, 'F': 31, 'o': 32, 'S': 33, 'd': 34, 'J': 35, 's': 36, '1': 37, 'P': 38, ';': 39, 'E': 40, 'K': 41, 'r': 42, 'l': 43, 'D': 44, '!': 45, 'p': 46, '\\n': 47, 'I': 48, ',': 49, 'X': 50, 'b': 51, '5': 52, 'a': 53, '\"': 54, 'Q': 55, '2': 56, 'h': 57, 'R': 58, 'n': 59, \"'\": 60, '.': 61, 'x': 62, 'Z': 63, '*': 64, '?': 65, '0': 66, '(': 67, 't': 68, 'V': 69, 'M': 70, ')': 71, 'T': 72, 'W': 73, '\\t': 74, 'u': 75, '7': 76, 'c': 77, 'w': 78}\n",
-      "{0: '3', 1: 'g', 2: 'z', 3: 'j', 4: 'N', 5: '\\\\', 6: 'q', 7: 'O', 8: 'B', 9: 'v', 10: 'U', 11: 'Y', 12: '8', 13: '4', 14: 'e', 15: '6', 16: 'm', 17: 'f', 18: 'y', 19: '-', 20: '9', 21: ':', 22: 'G', 23: 'H', 24: 'k', 25: 'i', 26: 'C', 27: 'L', 28: ' ', 29: 'A', 30: '~', 31: 'F', 32: 'o', 33: 'S', 34: 'd', 35: 'J', 36: 's', 37: '1', 38: 'P', 39: ';', 40: 'E', 41: 'K', 42: 'r', 43: 'l', 44: 'D', 45: '!', 46: 'p', 47: '\\n', 48: 'I', 49: ',', 50: 'X', 51: 'b', 52: '5', 53: 'a', 54: '\"', 55: 'Q', 56: '2', 57: 'h', 58: 'R', 59: 'n', 60: \"'\", 61: '.', 62: 'x', 63: 'Z', 64: '*', 65: '?', 66: '0', 67: '(', 68: 't', 69: 'V', 70: 'M', 71: ')', 72: 'T', 73: 'W', 74: '\\t', 75: 'u', 76: '7', 77: 'c', 78: 'w'}\n"
+      "{'z': 0, 'i': 1, 'u': 2, 'j': 3, 's': 4, 'Z': 5, 'd': 6, 'E': 7, 'k': 8, '?': 9, '4': 10, 'B': 11, 'F': 12, 'S': 13, ';': 14, 'e': 15, 'q': 16, '2': 17, ' ': 18, 'N': 19, 'a': 20, 'V': 21, 'Y': 22, \"'\": 23, '0': 24, '6': 25, 'A': 26, 'O': 27, 'c': 28, 'b': 29, 'p': 30, '\\\\': 31, 'f': 32, 'I': 33, 'l': 34, 'J': 35, 'M': 36, 'x': 37, 'o': 38, 't': 39, '7': 40, 'X': 41, 'W': 42, 'r': 43, 'H': 44, 'g': 45, 'U': 46, '~': 47, '(': 48, '8': 49, '*': 50, 'P': 51, 'R': 52, '-': 53, ':': 54, '\\n': 55, 'w': 56, '1': 57, '9': 58, 'L': 59, '\\t': 60, '5': 61, 'C': 62, '.': 63, 'n': 64, 'h': 65, 'G': 66, 'y': 67, 'K': 68, '3': 69, 'D': 70, '!': 71, ')': 72, '\"': 73, 'm': 74, 'v': 75, 'T': 76, 'Q': 77, ',': 78}\n",
+      "{0: 'z', 1: 'i', 2: 'u', 3: 'j', 4: 's', 5: 'Z', 6: 'd', 7: 'E', 8: 'k', 9: '?', 10: '4', 11: 'B', 12: 'F', 13: 'S', 14: ';', 15: 'e', 16: 'q', 17: '2', 18: ' ', 19: 'N', 20: 'a', 21: 'V', 22: 'Y', 23: \"'\", 24: '0', 25: '6', 26: 'A', 27: 'O', 28: 'c', 29: 'b', 30: 'p', 31: '\\\\', 32: 'f', 33: 'I', 34: 'l', 35: 'J', 36: 'M', 37: 'x', 38: 'o', 39: 't', 40: '7', 41: 'X', 42: 'W', 43: 'r', 44: 'H', 45: 'g', 46: 'U', 47: '~', 48: '(', 49: '8', 50: '*', 51: 'P', 52: 'R', 53: '-', 54: ':', 55: '\\n', 56: 'w', 57: '1', 58: '9', 59: 'L', 60: '\\t', 61: '5', 62: 'C', 63: '.', 64: 'n', 65: 'h', 66: 'G', 67: 'y', 68: 'K', 69: '3', 70: 'D', 71: '!', 72: ')', 73: '\"', 74: 'm', 75: 'v', 76: 'T', 77: 'Q', 78: ','}\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -170,11 +170,11 @@
     "#                    print(\"ERR!\",self.ys[t][self.targets[t]],\" \",np.sum(self.ys[t]))\n",
     "                \n",
     "            # cross entropy\n",
-    "            err       = np.log(prob_fix[self.targets[t]])\n",
+    "            err       = np.log(prob_fix[int(self.targets[t])])\n",
     "            avg_loss += err\n",
     "     \n",
     "            dy = copy.deepcopy(prob)\n",
-    "            dy[self.targets[t]] -= 1\n",
+    "            dy[int(self.targets[t])] -= 1\n",
     "            \n",
     "            W_grad += np.dot((np.atleast_2d(dy)).T,np.atleast_2d(self.hs[t]))\n",
     "            b_grad += dy\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -299,7 +299,7 @@
     "    \n",
     "    def bwd_pass(self, dh, prev_c, f, i, m, o, c_g):\n",
     "        \n",
-    "        #dh = np.clip(dh, -6, 6);       \n",
+    "        dh = np.clip(dh, -6, 6);       \n",
     "        # h = o*tanh(c)\n",
     "        do  = tanh(self.c) * dh\n",
     "        do  = sigmoid_deriv(o)*do\n",
@@ -307,7 +307,7 @@
     "        \n",
     "        # h = o*tanh(c) - add c_g (c_grad in next timestep, account for the branch here)\n",
     "        dcs = dh * o * tanh_deriv(self.c) + c_g\n",
-    "        #dcs = np.clip(dcs, -6, 6); \n",
+    "        dcs = np.clip(dcs, -6, 6); \n",
     "        \n",
     "        # c = c_prev * f + m * i\n",
     "        dm = i * dcs\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -368,151 +368,61 @@
       "CHAPTER ONE\n",
       "THE BOY WHO LIVED\n",
       "Mr. and\n",
-      "inputs [23, 53, 42, 42, 18, 28, 38, 32, 68, 68, 14, 42, 28, 53, 59, 34, 28, 68, 57, 14, 28, 33, 32, 42, 77, 14, 42, 14, 42, 60, 36, 28, 33, 68, 32, 59, 14, 47, 26, 23, 29, 38, 72, 40, 58, 28, 7, 4, 40, 47, 72, 23, 40, 28, 8, 7, 11, 28, 73, 23, 7, 28, 27, 48, 69, 40, 44, 47, 70, 42, 61, 28, 53, 59, 34]\n",
+      "inputs [44, 20, 43, 43, 67, 18, 51, 38, 39, 39, 15, 43, 18, 20, 64, 6, 18, 39, 65, 15, 18, 13, 38, 43, 28, 15, 43, 15, 43, 23, 4, 18, 13, 39, 38, 64, 15, 55, 62, 44, 26, 51, 76, 7, 52, 18, 27, 19, 7, 55, 76, 44, 7, 18, 11, 27, 22, 18, 42, 44, 27, 18, 59, 33, 21, 7, 70, 55, 36, 43, 63, 18, 20, 64, 6]\n",
       "arry Potter and the Sorcerer's Stone\n",
       "CHAPTER ONE\n",
       "THE BOY WHO LIVED\n",
       "Mr. and \n",
-      "targets [53, 42, 42, 18, 28, 38, 32, 68, 68, 14, 42, 28, 53, 59, 34, 28, 68, 57, 14, 28, 33, 32, 42, 77, 14, 42, 14, 42, 60, 36, 28, 33, 68, 32, 59, 14, 47, 26, 23, 29, 38, 72, 40, 58, 28, 7, 4, 40, 47, 72, 23, 40, 28, 8, 7, 11, 28, 73, 23, 7, 28, 27, 48, 69, 40, 44, 47, 70, 42, 61, 28, 53, 59, 34, 28]\n",
+      "targets [20, 43, 43, 67, 18, 51, 38, 39, 39, 15, 43, 18, 20, 64, 6, 18, 39, 65, 15, 18, 13, 38, 43, 28, 15, 43, 15, 43, 23, 4, 18, 13, 39, 38, 64, 15, 55, 62, 44, 26, 51, 76, 7, 52, 18, 27, 19, 7, 55, 76, 44, 7, 18, 11, 27, 22, 18, 42, 44, 27, 18, 59, 33, 21, 7, 70, 55, 36, 43, 63, 18, 20, 64, 6, 18]\n",
       "!!!! 431677\n",
       "0 err: -4.36944777346702\n",
-      "3\n",
-      "BHatEaSInEItotO rSTnOoedVO tE\n",
-      "e\n",
-      "STaTTc\n",
-      "e\n",
-      "500 err: -2.1475507015119693\n",
-      "C\n",
-      "heys Uncollys aldn't dooirs it saOned fi\n",
-      "1000 err: -2.0892386680919595\n",
-      "5\n",
-      "wherm co lot whe shesthisawat und smat, \n",
-      "1500 err: -2.1968226596876406\n",
-      "w\n",
-      "ave tooks wheras and Ley sat 't inlaidte\n",
-      "2000 err: -1.7689480838767209\n",
-      "i\n",
-      "ns abutsking forthe hene in fothen'd fle\n",
-      "2500 err: -2.1467696876625255\n",
-      "b\n",
-      "oor asfed wastings,ton'll lichist whit c\n",
-      "3000 err: -2.0929241417157116\n",
-      "c\n",
-      "e to ened thed was for do vos une sthey \n",
-      "3500 err: -2.139974445058305\n",
-      "k\n",
-      "edmed tich hiad using han and Hardled co\n",
-      "4000 err: -2.068105968182464\n",
-      "X\n",
-      "ed, but medwo,\" gee. \"If ou.\n",
-      "\"Mckte, go,\n",
-      "4500 err: -2.2847727892113165\n",
-      "7\n",
-      "nloMuld d an's hestpend crofesing yoff  \n",
-      "5000 err: -1.8081465170309798\n",
-      "H\n",
-      "an'd what an he -Master ane thill relisl\n",
-      "5500 err: -2.4136841545689522\n",
+      "z\n",
+      "IeDtroScTSdhEOEdysndEdRrTnoHeBAd\n",
+      "NdPTOHy\n",
+      "500 err: -2.1129819022350946\n",
+      "A\n",
+      "ncitOvenhight fony,\" thallyy aithd said \n",
+      "1000 err: -1.9442794904611298\n",
+      "R\n",
+      "t. Whe se hap a go corl,\" saga a bas gri\n",
+      "1500 err: -2.5457860816462166\n",
       ",\n",
-      "\" Hetich ust hred fleeld rmp dis air bri\n",
-      "!!!! 431677\n",
-      "6000 err: -2.3549497291850368\n",
-      "u\n",
-      "ghy's beckething alllecoverdoh.\"\n",
-      "\"-ar th\n",
-      "6500 err: -2.2128988550751947\n",
-      "G\n",
-      "enst, red onyure we croom.\n",
-      "Uncle  setott\n",
-      "7000 err: -4.651453155985276\n",
-      "I\n",
-      "Dl S- The. Gorlyd, w us as a youl Whad D\n",
-      "7500 err: -2.271755267992762\n",
-      "\t\n",
-      "ckeeret lllands at, toed eiryoo ar fre t\n",
-      "8000 err: -11.344894466111445\n",
-      ":\n",
-      "'m lornorrnene atirlorne onl, the arlosh\n",
-      "8500 err: -9.48826087128061\n",
-      "\n",
-      "\n",
-      "\"on  dasmikd..'ikkrmis.....'ilkndnrigaga\n",
-      "9000 err: -5.004509144525257\n",
-      "W\n",
-      "\n",
-      "- ciux -ndal, ittiI pintnglnd. sningtm \n",
-      "9500 err: -4.216771125709836\n",
-      "9\n",
-      " tr. dwis owetoone wwnuoowes Ropaoote ou\n",
-      "10000 err: -3.972007920087017\n",
-      "p\n",
-      "eerr. nrirg nngtoutu Hant he. khe tnnnt \n",
-      "10500 err: -4.222556915336095\n",
-      "T\n",
-      "hemtahettrolg ohe oaragehangkhawauoasoho\n",
-      "11000 err: -3.0667831151931737\n",
-      "-\n",
-      "-\"antpee g cer nheceropa.\n",
-      "\"e tpacogree k\n",
-      "11500 err: -3.3783554075811892\n",
-      "!\n",
-      "i,\"ininycksaiiin indy cot min,\n",
-      "sf perr g\n",
-      "!!!! 431677\n",
-      "12000 err: -3.8563164284664824\n",
-      ")\n",
-      " t\"en hey antte aoU ring. oo(etooloo(ou\n",
-      "\n",
-      "12500 err: -3.8339138832909976\n",
-      "y\n",
-      " ald yrues I\"nd  e  e t \"tepeme \"le z ls\n",
-      "13000 err: -5.426582466632866\n",
-      "D\n",
-      "huus wh tooyoa\"s -oorourouamloasos\n",
-      "\"\n",
-      "\"\"s\n",
-      "13500 err: -3.617600407611899\n",
-      "M\n",
-      "y heentrntdey t,lerrtehigetnuttdoditeltd\n",
-      "14000 err: -3.5767796489500383\n",
-      "f\n",
-      "e onledeofeenheewesvyerredoa wsheeeeseee\n",
-      "14500 err: -3.856098844517929\n",
-      "l\n",
-      "s tlnam sin tsiting tengg igrtitri fror \n",
-      "15000 err: -2.9806386569211467\n",
-      "V\n",
-      "om to gle lbw to t  orrs --- bttprsty sc\n",
-      "15500 err: -4.22341285945363\n",
-      "m\n",
-      "Ls\n",
-      "dthysesng d as ouch\"nsec h dssAsuh  s\n",
-      "16000 err: -3.4823788894227854\n",
-      "r\n",
-      " Mue\" iuihiwrinw wiiyilibp iuliiiil\"\"ivi\n",
-      "16500 err: -4.228745117503867\n",
-      "t\n",
-      "ish  baa d d.aaaaand ta ba iaaohy and a'\n",
-      "17000 err: -4.269108160912712\n",
+      "\" said Hag)id aw,\" --I't theynace wen' y\n",
+      "2000 err: -1.8683868839130529\n",
       "6\n",
-      "s  ao j c   t   boht tt  Qid b re  eaat \n",
-      "!!!! 431677\n",
-      "17500 err: -4.446943009451087\n",
-      "K\n",
-      "\n",
-      "on\"kovfcor nofrhlookn ykookannhoosiorak\n",
-      "18000 err: -3.3654043600534287\n",
-      "(\n",
-      "rhlt tuutl  Domme f fse  Plf, DoV tfedcT\n",
-      "18500 err: -4.214282721541072\n",
-      "e\n",
-      " yet PhsPseF intTes.se'ss nes tnunlsrtom\n",
-      "19000 err: -3.7098494206358685\n",
-      "E\n",
-      ". le.rol hIqii eliweesone.hpede ipeiolpi\n",
-      "19500 err: -4.239674518601751\n",
+      "ver boy's it's now beent it flh cad. The\n",
+      "2500 err: -2.114569813113655\n",
+      "P\n",
+      "rofessound was iny sas inthe Feill hatss\n",
+      "3000 err: -2.0325925547846975\n",
+      "Q\n",
+      "uicN- duppened of and where in a dompous\n",
+      "3500 err: -2.670746346492732\n",
       "0\n",
-      "l\" nf\"a tfa nnd st\"r akrlarloinya\"aoinal\n"
+      "chppow at Snininin anythangy.\n",
+      "\"Welling t\n",
+      "4000 err: -2.1766575113063347\n",
+      "*\n",
+      "ble Harr. Dumbledore of a epelfnoire, ar\n",
+      "4500 err: -2.7423695335960914\n",
+      "T\n",
+      "oeghed deads. Hearry ontrond fact clouff\n",
+      "5000 err: -1.7303090053379167\n",
+      "'\n",
+      "s foing tos to up, you tenn ione,\" antov\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-9c2666344f3d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[0mR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_inputs_targets\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mencode_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mvocab_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtargets\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m     \u001b[0mR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfwd_pass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[0merr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mR\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbwd_pass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-592da40191bc>\u001b[0m in \u001b[0;36mfwd_pass\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     76\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLSTM\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprev_h\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m             \u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mh\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mo\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLSTM\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfwd_pass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m             \u001b[1;31m# bookkeeping\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-7-85007f1b9a32>\u001b[0m in \u001b[0;36mfwd_pass\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mi\u001b[0m       \u001b[1;33m=\u001b[0m \u001b[0msigmoid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mib\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m         \u001b[0mm\u001b[0m       \u001b[1;33m=\u001b[0m \u001b[0mtanh\u001b[0m\u001b[1;33m(\u001b[0m   \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m         \u001b[0mo\u001b[0m       \u001b[1;33m=\u001b[0m \u001b[0msigmoid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mob\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mc\u001b[0m \u001b[1;33m*=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mc\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
