--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -107,11 +107,11 @@
     "            prob_fix  = prob + 1e-9\n",
     "\n",
     "            # cross entropy\n",
-    "            err       = np.log(prob_fix[self.targets[t]])\n",
+    "            err       = np.log(prob_fix[int(self.targets[t])])\n",
     "            avg_loss += err\n",
     "     \n",
     "            dy = copy.deepcopy(prob)\n",
-    "            dy[self.targets[t]] -= 1\n",
+    "            dy[int(self.targets[t])] -= 1\n",
     "            \n",
     "            W_grad += np.dot((np.atleast_2d(dy)).T,np.atleast_2d(self.hs[t]))\n",
     "            b_grad += dy\n",
@@ -158,8 +158,20 @@
     "        p   = softmax(self.y)\n",
     "        \n",
     "        \n",
-    "        return np.random.choice(range(self.lenIn), p=p.ravel())\n",
-    "  \n"
+    "        return np.random.choice(range(self.lenOut), p=p.ravel())\n",
+    "  \n",
+    "    def get_prob(self,x):\n",
+    "        # update input\n",
+    "        self.x = x\n",
+    "        self.RNN_cell.hx = np.hstack((self.h,self.x))\n",
+    "        self.h = self.RNN_cell.fwd_pass()\n",
+    "\n",
+    "        # output layer - may replace with softmax instead\n",
+    "        self.y = np.dot(self.W,self.h) + self.b\n",
+    "        p   = softmax(self.y)\n",
+    "        \n",
+    "        \n",
+    "        return p[1];"
    ]
   },
   {
@@ -201,7 +213,7 @@
     "    \n",
     "    def bwd_pass(self, dh):\n",
     "        \n",
-    "        #dh = np.clip(dh, -6, 6);       \n",
+    "        dh = np.clip(dh, -6, 6);       \n",
     "        # h = o*tanh(c)\n",
     "        dh  = tanh_deriv(self.h) * dh\n",
     "        dhb = dh\n",
