--- a/LSTM_Single.ipynb
+++ b/LSTM_Single.ipynb
@@ -68,7 +68,7 @@
     "# RNN\n",
     "class myRNN:\n",
     "    \n",
-    "    def __init__ (self, lenIn, lenOut, lenRec, sizeHidden, inputs_encoded, targets, learningRate):\n",
+    "    def __init__ (self, lenIn, lenOut, lenRec, sizeHidden, inputs_encoded, targets, learningRate,dropout_threshold):\n",
     "        \n",
     "        # Hyper parameters\n",
     "        self.lenIn          = lenIn\n",
@@ -76,6 +76,7 @@
     "        self.lenRec         = lenRec\n",
     "        self.sizeHidden     = sizeHidden\n",
     "        self.learningRate   = learningRate\n",
+    "        self.dropout_threshold = dropout_threshold\n",
     "        \n",
     "        # input & expected output\n",
     "        self.inputs_encoded = inputs_encoded;\n",
@@ -107,6 +108,9 @@
     "        # LSTM class\n",
     "        self.LSTM = LSTM(sizeHidden+lenIn,sizeHidden,lenRec,learningRate)\n",
     "        \n",
+    "        # Dropout vector\n",
+    "        self.dvo = np.zeros((lenRec,sizeHidden));\n",
+    "        \n",
     "        ''' end of myRNN.__init__ '''\n",
     "       \n",
     "    ''' This is used when mini-batch is used '''            \n",
@@ -115,14 +119,22 @@
     "        self.targets         = targets\n",
     "    \n",
     "    def fwd_pass(self): \n",
+    "                \n",
     "        prev_h = np.zeros_like(self.hs[0])\n",
     "        for t in range(0,self.lenRec):\n",
+    "            for i in range(self.dvo.shape[0]):\n",
+    "                rand = np.random.random()\n",
+    "                if(rand > dropout_threshold):\n",
+    "                    self.dvo[t][i] = 1;\n",
+    "                else:\n",
+    "                    self.dvo[t][i] = 0;\n",
     "            # update input\n",
     "            self.x    = self.inputs_encoded[t]\n",
     "            self.xs[t]= self.inputs_encoded[t]\n",
     "            \n",
     "            self.LSTM.hx = np.hstack((prev_h, self.x));\n",
-    "           \n",
+    "            self.LSTM.dvo = self.dvo[t];\n",
+    "            \n",
     "            c, h, f, i, m, o = self.LSTM.fwd_pass()\n",
     "            # bookkeeping\n",
     "            self.cs[t] = c\n",
@@ -192,7 +204,8 @@
     "                \n",
     "            self.LSTM.hx = np.hstack((prev_h,self.xs[t]));\n",
     "            self.LSTM.c = self.cs[t];\n",
-    "\n",
+    "            \n",
+    "            self.LSTM.dvo = self.dvo[t];\n",
     "            dhxf,dhxi,dhxm,dhxo, dbf,dbi,dbm,dbo, c2next_grad,h2next_grad,x_grad = \\\n",
     "            self.LSTM.bwd_pass( dh, prev_c ,self.fg[t],self.ig[t],self.mc[t],self.og[t],\\\n",
     "                                 c2next_grad);\n",
@@ -284,6 +297,8 @@
     "        self.Gmb = np.zeros(sizeHidden);\n",
     "        self.Gob = np.zeros(sizeHidden); \n",
     "        \n",
+    "        # for dropout\n",
+    "        self.dvo = np.zeros(sizeHidden); \n",
     "        ''' end of LSTM.__init__ '''\n",
     "        \n",
     "    def fwd_pass(self):\n",
@@ -291,6 +306,7 @@
     "        i       = sigmoid(np.dot(self.iW, self.hx) + self.ib)\n",
     "        m       = tanh(   np.dot(self.mW, self.hx) + self.mb)        \n",
     "        o       = sigmoid(np.dot(self.oW, self.hx) + self.ob)\n",
+    "        o       = np.multiply(o,self.dvo); # dropout\n",
     "        self.c *= f\n",
     "        self.c += i * m\n",
     "        self.h  = o * tanh(self.c)\n",
@@ -303,6 +319,7 @@
     "        # h = o*tanh(c)\n",
     "        do  = tanh(self.c) * dh\n",
     "        do  = sigmoid_deriv(o)*do\n",
+    "        do  = np.dot(do,self.dvo)\n",
     "        dhxo = np.dot((np.atleast_2d(do)).T,np.atleast_2d(self.hx)) \n",
     "        \n",
     "        # h = o*tanh(c) - add c_g (c_grad in next timestep, account for the branch here)\n",
@@ -536,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
