--- a/gunshot_mix.ipynb
+++ b/gunshot_mix.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import wave, numpy as np\n",
@@ -20,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ambient_1 = \"./audio_set/scream_data/file_97001.wav\"\n",
+    "ambient_1 = \"./audio_set/indoornoise.wav\"\n",
     "fs,amb_wave = wavfile.read(ambient_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -40,80 +38,18 @@
       "['shot_00.wav', 'shot_01.wav', 'shot_02.wav', 'shot_03.wav', 'shot_04.wav', 'shot_05.wav', 'shot_06.wav', 'shot_07.wav', 'shot_08.wav', 'shot_09.wav', 'shot_10.wav', 'shot_11.wav', 'shot_12.wav', 'shot_13.wav', 'shot_14.wav', 'shot_15.wav', 'shot_16.wav', 'shot_17.wav', 'shot_18.wav']\n",
       "./audio_set/gunshot/shot_00.wav\n",
       "44100\n",
-      "(86406, 2)\n",
-      "offset= 12.0037641723356 (661500,)\n",
-      "./audio_set/gunshot/shot_01.wav\n",
-      "96000\n",
-      "(116194, 2)\n",
-      "offset= 9.44715625 (1440000,)\n",
-      "./audio_set/gunshot/shot_02.wav\n",
-      "96000\n",
-      "(182728, 2)\n",
-      "offset= 2.8118541666666665 (1440000,)\n",
-      "./audio_set/gunshot/shot_03.wav\n",
-      "48000\n",
-      "(181770, 2)\n",
-      "offset= 10.153541666666667 (720000,)\n",
-      "./audio_set/gunshot/shot_04.wav\n",
-      "44100\n",
-      "(218101, 2)\n",
-      "offset= 1.5375056689342403 (661500,)\n",
-      "./audio_set/gunshot/shot_05.wav\n",
-      "96000\n",
-      "(191314, 2)\n",
-      "offset= 8.195302083333333 (1440000,)\n",
-      "./audio_set/gunshot/shot_06.wav\n",
-      "44100\n",
-      "(76585, 2)\n",
-      "offset= 3.828004535147392 (661500,)\n",
-      "./audio_set/gunshot/shot_07.wav\n",
-      "44100\n",
-      "(39005, 2)\n",
-      "offset= 2.840294784580499 (661500,)\n",
-      "./audio_set/gunshot/shot_08.wav\n",
-      "44100\n",
-      "(846336, 2)\n",
-      "offset= 8.721383219954648 (1323000,)\n",
-      "./audio_set/gunshot/shot_09.wav\n",
-      "44100\n",
-      "(203175, 2)\n",
-      "offset= 0.020702947845804988 (661500,)\n",
-      "./audio_set/gunshot/shot_10.wav\n",
-      "96000\n",
-      "(170323, 2)\n",
-      "offset= 2.924260416666667 (1440000,)\n",
-      "./audio_set/gunshot/shot_11.wav\n",
-      "44100\n",
-      "(103360, 2)\n",
-      "offset= 3.3025850340136054 (661500,)\n",
-      "./audio_set/gunshot/shot_12.wav\n",
-      "44100\n",
-      "(52992, 2)\n",
-      "offset= 4.728616780045352 (661500,)\n",
-      "./audio_set/gunshot/shot_13.wav\n",
-      "44100\n",
-      "(1154026, 2)\n",
-      "offset= 1.8284580498866214 (1323000,)\n",
-      "./audio_set/gunshot/shot_14.wav\n",
-      "44100\n",
-      "(326639, 2)\n",
-      "offset= 7.1670068027210885 (661500,)\n",
-      "./audio_set/gunshot/shot_15.wav\n",
-      "44100\n",
-      "(322031,)\n",
-      "offset= 1.143265306122449 (661500,)\n",
-      "./audio_set/gunshot/shot_16.wav\n",
-      "44100\n",
-      "(95968, 2)\n",
-      "offset= 6.172857142857143 (661500,)\n",
-      "./audio_set/gunshot/shot_17.wav\n",
-      "44100\n",
-      "(33696, 2)\n",
-      "offset= 6.831337868480726 (661500,)\n",
-      "./audio_set/gunshot/shot_18.wav\n",
-      "44100\n",
-      "(198767, 2)\n",
-      "offset= 1.5596825396825398 (661500,)\n"
+      "(86406, 2)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "only size-1 arrays can be converted to Python scalars",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-18-cd4173fe71e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0moffset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mtwo\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mx_wave\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[0mamb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mamb_wave\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mtwo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m     \u001b[0mamb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mamb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"offset=\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moffset\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mamb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars"
      ]
     }
    ],
@@ -151,9 +87,9 @@
     "        output[offset:min(amb.shape[0],offset+x_wave.shape[0])] += x_wave[0:min(amb.shape[0]-offset,x_wave.shape[0]),0]\n",
     "    #sd.play(output,fs,blocking=True)\n",
     "\n",
-    "    mix_filename = \"./audio_set/gunshot/mix/mix_097\"+wavfiles[i]\n",
+    "    mix_filename = \"./audio_set/gunshot/mix/mix_indoor\"+wavfiles[i]\n",
     "    wavfile.write(mix_filename,fs,output)\n",
-    "    text_filename = \"./audio_set/gunshot/mix_text/mix_097\"+wavfiles[i]+\".txt\"\n",
+    "    text_filename = \"./audio_set/gunshot/mix_text/mix_indoor\"+wavfiles[i]+\".txt\"\n",
     "    interval = interval + offset/fs\n",
     "    np.savetxt(text_filename, interval,fmt='%1.3f', delimiter='\\t') \n",
     "    "
@@ -202,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
