--- a/gunshot_mix.ipynb
+++ b/gunshot_mix.ipynb
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ambient_1 = \"./audio_set/indoornoise.wav\"\n",
+    "ambient_1 = \"./audio_set/rainnoise.wav\"\n",
     "fs,amb_wave = wavfile.read(ambient_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -38,18 +38,80 @@
       "['shot_00.wav', 'shot_01.wav', 'shot_02.wav', 'shot_03.wav', 'shot_04.wav', 'shot_05.wav', 'shot_06.wav', 'shot_07.wav', 'shot_08.wav', 'shot_09.wav', 'shot_10.wav', 'shot_11.wav', 'shot_12.wav', 'shot_13.wav', 'shot_14.wav', 'shot_15.wav', 'shot_16.wav', 'shot_17.wav', 'shot_18.wav']\n",
       "./audio_set/gunshot/shot_00.wav\n",
       "44100\n",
-      "(86406, 2)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "only size-1 arrays can be converted to Python scalars",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-cd4173fe71e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0moffset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mtwo\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mx_wave\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[0mamb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mamb_wave\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mtwo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m     \u001b[0mamb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.2\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mamb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"offset=\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moffset\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mfs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mamb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mamb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars"
+      "(86406, 2)\n",
+      "offset= 1.6612698412698412 (661500,)\n",
+      "./audio_set/gunshot/shot_01.wav\n",
+      "96000\n",
+      "(116194, 2)\n",
+      "offset= 11.089666666666666 (1440000,)\n",
+      "./audio_set/gunshot/shot_02.wav\n",
+      "96000\n",
+      "(182728, 2)\n",
+      "offset= 5.929375 (1440000,)\n",
+      "./audio_set/gunshot/shot_03.wav\n",
+      "48000\n",
+      "(181770, 2)\n",
+      "offset= 9.884791666666667 (720000,)\n",
+      "./audio_set/gunshot/shot_04.wav\n",
+      "44100\n",
+      "(218101, 2)\n",
+      "offset= 9.759637188208616 (661500,)\n",
+      "./audio_set/gunshot/shot_05.wav\n",
+      "96000\n",
+      "(191314, 2)\n",
+      "offset= 12.12059375 (1440000,)\n",
+      "./audio_set/gunshot/shot_06.wav\n",
+      "44100\n",
+      "(76585, 2)\n",
+      "offset= 0.626031746031746 (661500,)\n",
+      "./audio_set/gunshot/shot_07.wav\n",
+      "44100\n",
+      "(39005, 2)\n",
+      "offset= 2.9129931972789116 (661500,)\n",
+      "./audio_set/gunshot/shot_08.wav\n",
+      "44100\n",
+      "(846336, 2)\n",
+      "offset= 1.1506349206349207 (1323000,)\n",
+      "./audio_set/gunshot/shot_09.wav\n",
+      "44100\n",
+      "(203175, 2)\n",
+      "offset= 2.6325396825396825 (661500,)\n",
+      "./audio_set/gunshot/shot_10.wav\n",
+      "96000\n",
+      "(170323, 2)\n",
+      "offset= 5.058177083333334 (1440000,)\n",
+      "./audio_set/gunshot/shot_11.wav\n",
+      "44100\n",
+      "(103360, 2)\n",
+      "offset= 8.180521541950114 (661500,)\n",
+      "./audio_set/gunshot/shot_12.wav\n",
+      "44100\n",
+      "(52992, 2)\n",
+      "offset= 12.020204081632652 (661500,)\n",
+      "./audio_set/gunshot/shot_13.wav\n",
+      "44100\n",
+      "(1154026, 2)\n",
+      "offset= 0.8391383219954649 (1323000,)\n",
+      "./audio_set/gunshot/shot_14.wav\n",
+      "44100\n",
+      "(326639, 2)\n",
+      "offset= 7.05360544217687 (661500,)\n",
+      "./audio_set/gunshot/shot_15.wav\n",
+      "44100\n",
+      "(322031,)\n",
+      "offset= 7.058390022675737 (661500,)\n",
+      "./audio_set/gunshot/shot_16.wav\n",
+      "44100\n",
+      "(95968, 2)\n",
+      "offset= 12.398798185941043 (661500,)\n",
+      "./audio_set/gunshot/shot_17.wav\n",
+      "44100\n",
+      "(33696, 2)\n",
+      "offset= 5.461700680272108 (661500,)\n",
+      "./audio_set/gunshot/shot_18.wav\n",
+      "44100\n",
+      "(198767, 2)\n",
+      "offset= 5.781700680272109 (661500,)\n"
      ]
     }
    ],
@@ -77,7 +139,7 @@
     "\n",
     "\n",
     "    offset = int(max(0,np.random.random()*(15*two-x_wave.shape[0]/fs))*fs)\n",
-    "    amb = amb_wave[0:int(fs*15*two),0]\n",
+    "    amb = amb_wave[15:15+int(fs*15*two),0]\n",
     "    print(\"offset=\",offset/fs,amb.shape)\n",
     "    output = copy.deepcopy(amb)\n",
     "    \n",
@@ -87,9 +149,9 @@
     "        output[offset:min(amb.shape[0],offset+x_wave.shape[0])] += x_wave[0:min(amb.shape[0]-offset,x_wave.shape[0]),0]\n",
     "    #sd.play(output,fs,blocking=True)\n",
     "\n",
-    "    mix_filename = \"./audio_set/gunshot/mix/mix_indoor\"+wavfiles[i]\n",
+    "    mix_filename = \"./audio_set/gunshot/mix/mix_rainnoise2\"+wavfiles[i]\n",
     "    wavfile.write(mix_filename,fs,output)\n",
-    "    text_filename = \"./audio_set/gunshot/mix_text/mix_indoor\"+wavfiles[i]+\".txt\"\n",
+    "    text_filename = \"./audio_set/gunshot/mix_text/mix_rainnoise2\"+wavfiles[i]+\".txt\"\n",
     "    interval = interval + offset/fs\n",
     "    np.savetxt(text_filename, interval,fmt='%1.3f', delimiter='\\t') \n",
     "    "
